# comfyui-model-downloader

./: .gitignore  README.md  __init__.py  hf_download.py  pyproject.toml  requirements.txt  utils.py
examples/workflows/: README.md  auto-model-finder-scan.json  civitai-demo.json  civitai-tiny-download.json  hf-checkpoint-tiny-preview.json  hf-demo.json  huggingface-tiny-download.json
js/: autodownloader.js  hfdownloader.js
nodes/: __init__.py  auto_download.py  base_downloader.py  cai_download.py  cai_utils.py  checkpoint_loader.py  download_utils.py  hf_download.py  hf_utils.py  install.py  utils.py
nodes/auto/: constants.py  downloader.py  model_search.py  utils.py  workflow_scanner.py
nodes/cai/: cai_download.py
nodes/hf/: hf_download.py  hf_utils.py
tests/: helpers.py  test_auto_downloader.py  test_checkpoint_loader.py  test_civitai_downloader.py  test_frontend.py  test_hf_downloader.py  test_model_paths.py  test_package.py  test_workflow_examples.py
