[project]
name = "comfyui-model-downloader"
description = ""
version = "0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ciri/comfyui-model-downloader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ciri"
DisplayName = "comfyui-model-downloader"
Icon = ""
