[project]
name = "comfyui-model-downloader"
description = "Download Hugging Face and CivitAI models from ComfyUI workflows"
version = "0.3.0"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ciri/comfyui-model-downloader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ciri"
DisplayName = "comfyui-model-downloader"
Icon = ""
